DesiNZC/main/default/objects/Scope3CrbnFtprnt/fields/Business_Metric__c.field-meta.xml
<CustomField>
    <fullName>Business_Metric__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Metric</label>
    <referenceTo>Company_Metrics__c</referenceTo>
    <relationshipLabel>Scope 3 Carbon Footprints</relationshipLabel>
    <relationshipName>Scope_3_Carbon_Footprints</relationshipName>
    <type>Lookup</type>
</CustomField>