DesiNZC/main/default/objects/Scope3CrbnFtprnt/fields/Cost_of_Emissions__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Emissions__c</fullName>
    <formula>Business_Metric__r.Internal_Cost_of_Carbon__c *  TotScope3EmissionsInTco2e</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost of Emissions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>