DesiNZC/main/default/objects/Scope3CrbnFtprnt/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Opportunity linked to Portfolio Company</description>
    <label>Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Portfolio_Company__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Scope 3 Carbon Footprints</relationshipLabel>
    <relationshipName>Scope_3_Carbon_Footprints</relationshipName>
    <type>Lookup</type>
</CustomField>