DesiNZC/main/default/objects/Scope3CrbnFtprnt/fields/Portfolio_Company__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Scope 3 Carbon Footprints</relationshipLabel>
    <relationshipName>Scope_3_Carbon_Footprints</relationshipName>
    <type>Lookup</type>
</CustomField>